feat: updates the user task receiving handler
