# openapi/openapi.yaml
@@ -8,18 +8,6 @@ paths:
       summary: Get all tasks
       tags:
         - tasks
-      requestBody:
-        description: The ID of the user who owns the task
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                user_id:
-                  type: integer
-                  format: uint
-                  description: The ID of the user who owns the task
       responses:
         '200':
           description: A list of tasks
@@ -173,6 +161,28 @@ paths:
       responses:
         '204':
           description: ''
+  /users/{user_id}/tasks:
+    get:
+      summary: Get all tasks of the current user
+      tags:
+        - users
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: The ID of the user
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: User task list
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
 components:
   schemas:
     Task:
